<resources>

	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="save">Save</string>
	<string name="delete">Delete</string>

	<string name="app_name">Tracker</string>

	<string name="permissions_request_title">App Permissions</string>
	<string name="permissions_request_primer">Before you get started, we need to request the permissions needed for this app to work.</string>
	<string name="permissions_request_failure">Oh no, that didn\'t work! Would you like to try again?</string>

	<string name="export_data_btn">Export Data</string>
	<string name="export_data_in_progress">Preparing data…</string>
	<string name="export_data_failed">Data export failed</string>
	<string name="export_data_share">Share exported data</string>

	<string name="sync_data_btn">Export Data</string>
	<string name="sync_data_in_progress">Preparing data…</string>
	<string name="sync_data_failed">Data sync failed</string>
	<string name="sync_data_succeeded">Data sync complete</string>

	<string name="access_key_title">Enter Access Key:</string>
	<string name="access_key_hint">Access key</string>
	<string name="access_key_failed">Invalid access key</string>

	<string name="no_log_entries">No log entries yet</string>
	<string name="log_entry_start_time">Since %s</string>
	<string name="log_entry_current_label">Right now:</string>
	<string name="log_entry_switch_btn">Switch</string>

	<string name="log_entry_edit_title">Title:</string>
	<string name="log_entry_edit_title_hint">e.g. Sleeping</string>
	<string name="log_entry_edit_title_btn">Suggestions</string>

	<string name="log_entry_edit_start_title">Since:</string>
	<string name="log_entry_edit_start_date_hint">Date</string>
	<string name="log_entry_edit_start_time_hint">Time</string>

	<string name="log_entry_edit_note_title">Notes:</string>
	<string name="log_entry_edit_note_hint">Optional</string>

	<string name="same_day_joda_time_format">HH:mm</string>
	<string name="different_day_joda_time_format">yyyy-MM-dd HH:mm</string>

	<string name="date_entry_joda_format">yyyy-MM-dd</string>
	<string name="time_entry_joda_format">HH:mm</string>

	<string name="delete_confirm_title">Are You Sure?</string>
	<string name="delete_confirm_body">Are you sure you want to delete this log entry?</string>

</resources>
